test/files/neg/macro-noexpand.check
Macros_Test_2.scala:7: error: not found: value x
  foo(x)
      ^
1 error
